samples/sample-gke/kubernetes-manifests/2048-gateway.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: deployment-2048
  spec:
    selector:
      matchLabels:
        app.kubernetes.io/name: app-2048
    replicas: 5
    template:
      metadata:
        labels:
          app.kubernetes.io/name: app-2048
      spec:
        containers:
        - image: alexwhen/docker-2048
          imagePullPolicy: Always
          name: app-2048
          ports:
          - containerPort: 80
---
  apiVersion: v1
  kind: Service
  metadata:
    name: service-2048
  spec:
    ports:
      - port: 80
        targetPort: 80
        protocol: TCP
    type: NodePort
    selector:
      app.kubernetes.io/name: app-2048
---
  apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    name: gateway-2048
    # annotations:
    #   networking.gke.io/certmap: store-example-com-map
  spec:
    gatewayClassName: gke-l7-global-external-managed
    listeners:
    - name: http
      protocol: HTTP
      port: 80
---
  apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    name: my-route
  spec:
    parentRefs:
    - name: gateway-2048
    # hostnames:
    # - "example.com"
    rules:
    - matches:
      - path:
          value: /
      backendRefs:
      - name: service-2048
        port: 80
