samples/sample-gke/kubernetes-manifests/2048.yaml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: deployment-2048
  spec:
    selector:
      matchLabels:
        app.kubernetes.io/name: app-2048
    replicas: 5
    template:
      metadata:
        labels:
          app.kubernetes.io/name: app-2048
      spec:
        containers:
        - image: alexwhen/docker-2048
          imagePullPolicy: Always
          name: app-2048
          ports:
          - containerPort: 80
---
  apiVersion: v1
  kind: Service
  metadata:
    name: service-2048
  spec:
    ports:
      - port: 80
        targetPort: 80
        protocol: TCP
    type: NodePort
    selector:
      app.kubernetes.io/name: app-2048
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-2048
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
  spec:
    rules:
      - http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  number: 80
